--- a/datastorage.cabal
+++ b/datastorage.cabal
@@ -12,8 +12,8 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     TypedBinary
+  exposed-modules:     TypedBinary, BlobStore
   -- other-modules:       
-  build-depends:       base, mtl, transformers, vector, bytestring, text, byteable >=0.1, cryptohash >=0.11, smallcheck >=1.1, attoparsec >=0.10, binary >=0.7, lens >=4.1, data-binary-ieee754>=0.4
+  build-depends:       base, mtl, transformers, vector, bytestring, text, byteable >=0.1, cryptohash >=0.11, smallcheck >=1.1, attoparsec >=0.10, binary >=0.7, lens >=4.1, data-binary-ieee754>=0.4, deepseq >=1.3, exceptions >=0.5, hashable >= 1.2, unordered-containers >=0.2
   -- build-depends:       base ==4.6.*, cryptohash ==0.11.*, cipher-aes ==0.2.*, bytestring ==0.10.*, byteable ==0.1.*, exceptions ==0.5.*, attoparsec ==0.10.*, pipes ==4.1.*, vector ==0.10.*, mtl ==2.1.*, QuickCheck ==2.6.*, lens ==4.1.*, deepseq ==1.3.*, criterion ==0.8.*, statistics ==0.10.*, text ==0.11.*, binary ==0.7.*, data-binary-ieee754 ==0.4.*, transformers ==0.3.*, smallcheck ==1.1.*, pipes-bytestring ==2.0.*, free ==4.7.*, mmorph ==1.0.*, unordered-containers ==0.2.*, hashable ==1.2.*
   hs-source-dirs:      src
