--- a/datastorage.cabal
+++ b/datastorage.cabal
@@ -14,5 +14,5 @@ cabal-version:       >=1.8
 library
   exposed-modules:     TypedBinary, BlobStore, RollingVector
   -- other-modules:       
-  build-depends:       base, mtl, transformers, vector, bytestring, text, byteable >=0.1, cryptohash >=0.11, smallcheck >=1.1, attoparsec >=0.10, binary >=0.7, lens >=4.1, data-binary-ieee754>=0.4, deepseq >=1.3, exceptions >=0.5, hashable >= 1.2, unordered-containers >=0.2, mmorph >=1.0, conduit-combinators >=0.2.5
+  build-depends:       base, mtl, transformers, vector, bytestring, text, byteable >=0.1, cryptohash >=0.11, smallcheck >=1.1, attoparsec >=0.10, binary >=0.7, lens >=4.1, data-binary-ieee754>=0.4, deepseq >=1.3, exceptions >=0.5, hashable >= 1.2, unordered-containers >=0.2, mmorph >=1.0, conduit-combinators >=0.2.5, QuickCheck >=2.6
   hs-source-dirs:      src
